--- a/photographer.html
+++ b/photographer.html
@@ -99,6 +99,7 @@
 
     <!-- Les scripts JS -->
     
+    <script src="data/data.js"></script>
     <script src="scripts/factories/photographer.js"></script>
     <script src="scripts/factories/media.js"></script>
     <script src="/scripts/pages/photographer.js"></script>
